fixed header z-index

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     align-items: center;
     color: white;
     height: 80px;
+    z-index: 100;
 }
 
 .logo {
@@ -470,6 +471,7 @@ footer {
     z-index: 100;
     opacity: 0;
     transition: all 0.5s ease-in-out;
+    z-index: 110;
 }
 
 .cover-modal-active {
@@ -493,6 +495,7 @@ footer {
     border-bottom-right-radius: 50%;
     padding: 25px;
     color: white;
+    z-index: 110;
 }
 
 .modal-title {
@@ -566,6 +569,7 @@ footer {
     z-index: 110;
     opacity: 0;
     transition: all 0.5s ease-in-out;
+    z-index: 110;
 }
 
 .register-modal .modal-title {
@@ -866,7 +870,7 @@ footer {
     .header {
         position: sticky;
         top: 0px;
-        z-index: 1;
+        z-index: 100;
     }
 
     .logo a {
@@ -979,6 +983,7 @@ footer {
     .modal-window {
         flex: 0 0 80%;
         max-width: 80%;
+        z-index: 110;
     }
 
     .register-modal {
@@ -989,6 +994,7 @@ footer {
         height: 100vh;
         margin: 0 auto;
         background-color: rgba(0, 0, 0, 0.95);
+        z-index: 110;
     }
 
     .register-modal .modal-window {
@@ -1088,6 +1094,7 @@ footer {
     .modal-window {
         flex: 0 0 50%;
         max-width: 50%;
+        z-index: 110;
     }
 
     .register-modal {
@@ -1100,6 +1107,7 @@ footer {
         border-top-right-radius: 30%;
         border-bottom-left-radius: 50%;
         border-bottom-right-radius: 50%;
+        z-index: 110;
     }
 
     .sign-in-modal {
@@ -1112,6 +1120,7 @@ footer {
         border-top-right-radius: 30%;
         border-bottom-left-radius: 50%;
         border-bottom-right-radius: 50%;
+        z-index: 110;
     }
 }
 
@@ -1295,6 +1304,7 @@ footer {
     header {
         position: sticky;
         top: 0;
+        z-index: 100;
     }
 
     .menu {
@@ -1459,6 +1469,7 @@ footer {
     .modal-window {
         flex: 0 0 80%;
         max-width: 80%;
+        z-index: 110;
     }
 
     .register-modal {
@@ -1469,6 +1480,7 @@ footer {
         height: 100vh;
         margin: 0 auto;
         background-color: rgba(0, 0, 0, 0.95);
+        z-index: 110;
     }
 
     .register-modal .modal-window {
@@ -1484,6 +1496,7 @@ footer {
         height: 100vh;
         margin: 0 auto;
         background-color: rgba(0, 0, 0, 0.95);
+        z-index: 110;
     }
 
     .sign-in-modal .modal-window {
